[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panpdf"
version = "0.2.7"
description = "PDF documentation generator"
readme = "README.md"
license = "MIT"
authors = [{ name = "daizutabi", email = "daizutabi@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: MkDocs",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.10"
dependencies = [
  "aiohttp",
  "ipykernel",
  "nbformat",
  "panflute >= 2.3.1",
  "pyyaml",
  "pyzotero",
  "rich",
  "typer",
]

[project.urls]
Documentation = "https://daizutabi.github.io/panpdf"
Source = "https://github.com/daizutabi/panpdf"
Issues = "https://github.com/daizutabi/panpdf/issues"

[project.scripts]
panpdf = "panpdf.main:app"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]
[tool.hatch.build.targets.wheel]
packages = ["src/panpdf"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.hatch-test]
dependencies = [
  "cairosvg",
  "hvplot",
  "matplotlib",
  "pandas",
  "polars",
  "pyarrow",
  "pytest-clarity",
  "pytest-cov",
  "pytest-randomly",
  "pytest-xdist",
  "seaborn",
]

[tool.pytest.ini_options]
addopts = ["--cov-report=lcov:lcov.info", "--cov=panpdf", "--doctest-modules"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
filterwarnings = ['ignore:setDaemon\(\) is deprecated:DeprecationWarning']

[tool.coverage.report]
exclude_lines = [
  "# pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.docs]
dependencies = ["mkdocs-material", "mkdocs-typer"]
python = "3.12"

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict {args}"
serve = "mkdocs serve --dev-addr localhost:8000 {args}"
deploy = "mkdocs gh-deploy --force"

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"

[tool.ruff]
line-length = 100
target-version = "py312"
extend = "ruff_defaults.toml"

[tool.ruff.lint]
ignore = ['RUF001']
unfixable = ["F401", "RUF100"]

[tool.ruff.lint.extend-per-file-ignores]
"main.py" = ["ARG001", "UP007"]

[tool.ruff.lint.pydocstyle]
convention = "google"
